--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     },
     "replace": {
-        "typo3-ter/t3-template": "self.version"
+        "typo3-ter/components_api": "self.version"
     },
     "extra": {
         "typo3/cms": {
